--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
-
-/* CSS * Selector, Select all elements */
+/* Selector CSS *, selecciona todos los elementos */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
 }
-
 html {
   scroll-behavior: smooth;
 }
-/* Navbar Styling*/
+/* Estilo de la barra de navegación */
 .navbar {
   position: fixed;
   width: 100%;
@@ -23,7 +21,7 @@ html {
 }
 .navbar.sticky {
   padding: 2px 0;
-  background-color: crimson;
+  background-color: Orange;
 }
 .max-width {
   max-width: 1300px;
@@ -42,9 +40,8 @@ html {
   font-family: "Pacifico";
   transition: all 0.3s ease;
 }
-
 .navbar .logo a span {
-  color: crimson;
+  color: Orange;
 }
 .navbar.sticky .logo a span {
   color: white;
@@ -66,13 +63,13 @@ html {
   transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-  color: crimson;
+  color: Orange;
 }
 .navbar.sticky .menu li a:hover {
   color: #000;
 }
 
-/* Menu Button Styling */
+/* Estilo del botón de menú */
 .menu-btn {
   color: white;
   font-size: 23px;
@@ -80,12 +77,12 @@ html {
   display: none;
 }
 
-/* Scroll button styling */
+/* Estilo del botón de desplazamiento */
 .scroll-up-btn {
   position: fixed;
   height: 50px;
   width: 47px;
-  background: crimson;
+  background: Orange;
   right: 30px;
   bottom: 10px;
   text-align: center;
@@ -104,8 +101,7 @@ html {
   pointer-events: auto;
   bottom: 30px;
 }
-
-/* Fade In & Fade Out Elements on Scroll Start */
+/* Desvanecer elementos al comenzar a desplazarse */
 .fadein {
   opacity: 0.5;
 }
@@ -113,11 +109,10 @@ html {
   transition: opacity 0.1s ease;
   opacity: 1 !important;
 }
-
-/* Home Section Styling */
+/* Estilo de la sección de inicio */
 .home {
   display: flex;
-  background: url(images/bannernew.jpg) no-repeat center;
+  background: url(/images/bannernew.jpg) no-repeat center;
   height: 100vh;
   background-size: cover;
   background-attachment: fixed;
@@ -142,17 +137,17 @@ html {
 }
 .home .home-content .text-3 span {
   font-weight: 500;
-  color: crimson;
+  color: Orange;
 }
 .home .home-content a {
   display: inline-block;
-  background: crimson;
+  background: Orange;
   color: #fff;
   font-size: 25px;
   padding: 8px 20px;
   margin-top: 20px;
   border-radius: 6px;
-  border: 2px solid crimson;
+  border: 2px solid Orange;
   transition: all 0.3s ease;
 }
 .home .home-content .web {
@@ -163,8 +158,7 @@ html {
   color: white;
   background: #000;
 }
-
-/* all similar content styling code */
+/* Estilo de contenido similar */
 section {
   padding: 100px 0;
 }
@@ -208,7 +202,7 @@ section .title::after {
   left: 50%;
   padding: 5px;
   font-size: 20px;
-  color: crimson;
+  color: Orange;
   background: #fff;
   transform: translateX(-50%);
 }
@@ -223,9 +217,9 @@ section .title::after {
   background: #fff;
 }
 
-/* about section styling */
+/* Estilo de la sección "Acerca de" */
 .about .title::after {
-  content: "who am i";
+  content: "quién soy";
 }
 
 .about .about-content .left {
@@ -246,7 +240,7 @@ section .title::after {
   margin-bottom: 10px;
 }
 .about .about-content .right .text span {
-  color: crimson;
+  color: Orange;
 }
 .about .about-content .right p {
   text-align: justify;
@@ -255,22 +249,22 @@ section .title::after {
 }
 .about .about-content .right a {
   display: inline-block;
-  background: crimson;
+  background: Orange;
   color: #fff;
   font-size: 25px;
   font-weight: 500;
   padding: 3px 25px;
   margin-top: 20px;
   border-radius: 6px;
-  border: 2px solid crimson;
+  border: 2px solid Orange;
   transition: all 0.3s ease;
 }
 .about .about-content .right a:hover {
-  color: crimson;
+  color: Orange;
   background: none;
 }
 
-/* Social media section styling */
+/* Estilo de la sección de redes sociales */
 .button1 {
   float: left;
   width: 45px;
@@ -294,7 +288,7 @@ section .title::after {
 .button1 .icon i {
   font-size: 18px;
   line-height: 45px;
-  color: crimson;
+  color: Orange;
   transition: all 0.3s ease-in-out;
 }
 .button1:hover {
@@ -325,7 +319,6 @@ section .title::after {
 .button1:nth-child(4):hover .icon {
   background: #1da1f2;
 }
-
 .button1:nth-child(5):hover .icon {
   background: #1da1f2;
 }
@@ -351,22 +344,19 @@ section .title::after {
 .button1:nth-child(4) span a {
   color: #1da1f2;
 }
-
 .button1:nth-child(5) span a {
   color: #1da1f2;
 }
-
 .button1:nth-child(6) span a {
   color: #333;
 }
 .button1:nth-child(7) span a {
   color: #1da1f2;
 }
-
-/* skills section styling */
+/* Estilo de la sección de habilidades */
 .skills .title::after {
   background: #111;
-  content: "what i know";
+  content: "lo que sé";
 }
 .skills .skills-content .column {
   width: calc(50% - 30px);
@@ -383,18 +373,18 @@ section .title::after {
 }
 .skills .skills-content .left a {
   display: inline-block;
-  background: crimson;
+  background: Orange;
   color: #fff;
   font-size: 18px;
   font-weight: 500;
   padding: 8px 16px;
   margin-top: 20px;
   border-radius: 6px;
-  border: 2px solid crimson;
+  border: 2px solid Orange;
   transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover {
-  color: crimson;
+  color: Orange;
   background: none;
 }
 .skills .skills-content .right .info {
@@ -406,10 +396,9 @@ section .title::after {
 .skills .skills-content .right .info img {
   padding: 0 10px;
 }
-
-/* Project section styling */
+/* Estilo de la sección de proyectos */
 .projects .title::after {
-  content: "check my work";
+  content: "ofrezco mis trabajos";
 }
 .projects .carousel .card {
   background: #222;
@@ -431,7 +420,6 @@ section .title::after {
 .projects .carousel .card:hover .box {
   transform: scale(1.02);
 }
-
 .projects .carousel .card p {
   font-size: 16px;
   padding-top: 10px;
@@ -442,7 +430,7 @@ section .title::after {
   width: 280px;
   object-fit: fill;
   border-radius: 10px;
-  border: 2px solid crimson;
+  border: 2px solid Orange;
   transition: all 0.3s ease;
 }
 .projects .carousel .card:hover img {
@@ -458,7 +446,7 @@ section .title::after {
   margin: 0 5px;
   outline: none !important;
   border-radius: 50%;
-  border: 2px solid crimson !important;
+  border: 2px solid Orange !important;
   transition: all 0.3s ease;
 }
 .owl-dot.active {
@@ -467,13 +455,12 @@ section .title::after {
 }
 .owl-dot.active,
 .owl-dot:hover {
-  background: crimson !important;
+  background: Orange !important;
 }
-
-/* contact section styling */
+/* Estilo de la sección de contacto */
 .contact .title::after {
   background: #111;
-  content: "get in touch";
+  content: "ponerte en contacto";
 }
 .contact .contact-content .column {
   width: calc(50% - 30px);
@@ -505,7 +492,7 @@ section .title::after {
 }
 .contact .contact-content .row i {
   font-size: 25px;
-  color: crimson;
+  color: Orange;
 }
 .contact .contact-content .row .email-icon {
   margin-left: -7px;
@@ -565,8 +552,8 @@ section .title::after {
 .contact .right form .button button {
   height: 100%;
   width: 100%;
-  border: 2px solid crimson;
-  background: crimson;
+  border: 2px solid Orange;
+  background: Orange;
   color: #fff;
   font-size: 22px;
   font-weight: 500;
@@ -579,7 +566,7 @@ section .title::after {
   background: none;
 }
 
-/* footer section styling */
+/* Estilo de la sección de pie de página */
 footer {
   background: #fff;
   padding: 20px 23px;
@@ -587,14 +574,14 @@ footer {
   text-align: center;
 }
 footer span a {
-  color: crimson;
+  color: Orange;
   text-decoration: none;
 }
 footer span a:hover {
   text-decoration: underline;
 }
 
-/* responsive media query start */
+/* Consulta de medios responsivos */
 @media (max-width: 1300px) {
   .home .max-width {
     margin-left: 0px;
@@ -671,7 +658,6 @@ footer span a:hover {
     flex: 100%;
     margin-top: 30px;
   }
-
   .skills .skills-content .column,
   .contact .contact-content .column {
     width: 100%;
@@ -681,7 +667,6 @@ footer span a:hover {
     margin-top: 0px;
   }
 }
-
 @media (max-width: 690px) {
   .max-width {
     padding: 0 23px;
@@ -696,13 +681,11 @@ footer span a:hover {
     font-size: 20px;
   }
 }
-
 @media (max-width: 540px) {
   .about .about-content .right .text .break {
     display: block;
   }
 }
-
 @media (max-width: 500px) {
   .max-width {
     padding: 0 23px;
@@ -722,7 +705,6 @@ footer span a:hover {
     width: 200px;
   }
 }
-
 @media (max-width: 380px) {
   .about .about-content .left img {
     height: 250px;
